fix spacing, fix filtering

--- a/web/src/components/ProcessTimeline2/UnitTimeline.scss
+++ b/web/src/components/ProcessTimeline2/UnitTimeline.scss
@@ -62,7 +62,7 @@
     }
 
     .unit-timeline-track {
-      position: relative;
+      //position: relative;
       height: 100%;
       min-height: 1000px;
       display: inline-block;
